# aiengdict

./: .gitignore  .pre-commit-config.yaml  Makefile  dictionary.backup  env_example.txt  main.py  prompts.py  pyproject.toml  pytest.ini  run_tests.py  view_database.py
docs/: __init__.py  projectinfo.md  testing_summary.md  warnings_fix_summary.md
scripts/: clear_database.py  migrate_database.py  run_tests.py  view_database.py
src/: database.py  models.py
static/css/: auth.css  style.css
static/js/: app.js  auth.js
templates/: index.html  login.html  register.html
tests/: conftest.py  test_auth_database.py  test_auth_routes.py  test_database.py  test_integration.py  test_main.py  test_models.py  test_prompts.py
